# fractal

./: .gitignore  Computer_System.qsys  DE1_SoC_Computer.qsf  DE1_SoC_Computer.sdc  DE1_SoC_Computer.v  README.md  VGA_Subsystem.qsys  application.cpp  balancer.cpp  balancer.h  constants.h  disp.py  disp_tile.py  hps_fifo_decoder.v  main.cpp  mand_solver.v  mem_disp.py  meson.build  mult.v  multi_solver.v  multi_tile_solver.sv  optimization_tests.py  pattern_solver.v  pixel_iterator.v  priority_encoder.v  ram.v  renderer.cpp  request_distributor.sv  setup.sh  signed_mult.v  simulate.sh  solver.v  solver_control.v  solver_datapath.v  solver_manager.v  tile_client.cpp  tile_client.h  tile_manager.cpp  tile_manager.h  tile_request_heap.h  (+9 more)
hps/: mouse.c  setiter.c  setparam.c  solver_test.c  solver_test.cpp
hps_solver/: CMakeLists.txt  application.cpp  application.h  big_float.cpp  big_float.h  big_int.cpp  big_int.h  bignum.cpp  bignum.h  complex.h  constants.h  cpu_solver.cpp  cpu_solver.h  fpga_solver.cpp  fpga_solver.h  main  main.cpp  renderer.cpp  renderer.h  sdl_input_controller.cpp  sdl_input_controller.h  socket_util.cpp  socket_util.h  solver.cpp  solver.h  test_bignum.cpp  tile.cpp  tile.h  tile_client.cpp  tile_client.h  tile_header.h  tile_manager.cpp  tile_manager.h  tile_request_heap.cpp  tile_request_heap.h  tile_request_packet.h  tile_server.cpp  tile_server.h  tile_solver.cpp  tile_solver.h  (+2 more)
hps_solver/model/: Input.h
input/: controller.cpp  controller.h  input.h  model.h
model/: Input.h
networking/: networking.cpp  networking.h  remote_sink.cpp  remote_sink.h  remote_source.cpp  remote_source.h
solver/: solver.cpp  solver.h  tile_header.cpp  tile_header.h
test/: integ_test.v  multi_solver_test.v  multi_tile_solver_test.sv  pattern_solver_test.v  pixel_iterator_test.v  priority_encoder_test.v  request_distributor_test.sv  solver_control_test.v  solver_manager_test.v  solver_repeatability_test.v  solver_test.v  sover_datapath_test.v  tile_solver_legit_test.v  write_arbitrator_test.sv
tilestream/: cache.cpp  cache.h  reliable_node.cpp  reliable_node.h  sink.h  source.h  source_demux.cpp  source_demux.h
